boj 18138 리유나는 세일러복을 좋아해 외 여러개개

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,13 @@
         "xmemory": "cpp",
         "xtr1common": "cpp",
         "unordered_map": "cpp",
-        "bitset": "cpp"
+        "bitset": "cpp",
+        "random": "cpp",
+        "chrono": "cpp",
+        "forward_list": "cpp",
+        "iomanip": "cpp",
+        "ratio": "cpp",
+        "sstream": "cpp"
     },
     "code-runner.runInTerminal": true,
     "code-runner.executorMap": {
