--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,9 @@
         "forward_list": "cpp",
         "iomanip": "cpp",
         "ratio": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "stack": "cpp",
+        "map": "cpp"
     },
     "code-runner.runInTerminal": true,
     "code-runner.executorMap": {
