--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,5 +82,6 @@
         "go": "go run",
         "python": "python",
         "ruby": "ruby"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
